[tool.poetry]
name = "flow-meters"
version = "0.1.0"
description = "flow-meters for brewblox"
authors = ["Code Fairies Inc <rob rob.knighton10@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "~1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-flake8 = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
aresponses = "*"
flake8-quotes = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
